# cargo-about

./: .mergify.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  about.hbs  about.html  about.toml  about2.html  arklicenses.html  deny.toml  index.html  print.html  release.toml  searchindex.js  searchindex.json  spdx_cache.bin.zstd
.cargo/: config.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: build-pages.rs  package.sh
.github/workflows/: automerge.yml  rust-ci.yml
cli/: clarify.html  common.html  index.html  init.html
cli/generate/: config.html  index.html  output.html  workarounds.html
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/cli/: clarify.md  common.md  init.md
docs/src/cli/generate/: README.md  config.md  default-example.html  output.md  workarounds.md
src/: bindings.toml  generate.rs  lib.rs  licenses.rs  win_bindings.rs
src/cargo-about/: clarify.rs  generate.rs  init.rs  main.rs
src/cargo-about-me/: generate.rs  main.rs
src/licenses/: config.rs  fetch.rs  mod.rs  resolution.rs  scan.rs  workarounds.rs
src/licenses/workarounds/: bitvec.rs  chrono.rs  clap.rs  cocoa.rs  gtk.rs  linux_raw_sys.rs  prost.rs  ring.rs  rustix.rs  rustls.rs  sentry.rs  tonic.rs  tract.rs  unicode_ident.rs  wasmtime.rs
tests/: all.rs
tests/cli/: generate.rs  init.rs  mod.rs
tests/utils/: cargo_about.rs  mod.rs  package.rs  predicates.rs
