[package]
name = "cargo-about"
version = "0.6.1"
description = "Cargo plugin for generating a listing of all of the crates and the the terms under which they are licensed"
authors = [
  "Embark <opensource@embark-studios.com>",
  "Jake Shadle <jake.shadle@embark-studios.com>",
]
edition = "2021"
rust-version = "1.70.0"
repository = "https://github.com/EmbarkStudios/cargo-about"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/cargo-about"
homepage = "https://github.com/EmbarkStudios/cargo-about"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo", "license", "spdx"]
exclude = ["media/"]

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "cargo-about"
path = "src/cargo-about/main.rs"

[profile.release]
strip = "debuginfo"

[dependencies]
# Colorization
nu-ansi-term = "0.50"
# Error facilities
anyhow = "1.0"
# License detection
askalono = "0.4"
# API helpers for api.clearlydefined.io
cd = { version = "0.3", features = ["blocking"] }
# Argument parsing
clap = { version = "4.0", features = ["derive"] }
# Diagnostic reporting
codespan = "0.11"
codespan-reporting = "0.11"
# Logging helpers
fern = "0.6"
# Template engine for output
handlebars = { version = "5.1", features = ["dir_source"] }
# $HOME retrieval
home = "0.5"
# Directory walking
ignore = "0.4"
# Dependency graphing
krates = "0.16.4"
# Logging macros
log = "0.4"
# Better heap allocator over system one (usually)
mimalloc = "0.1"
# Better locking primitives
parking_lot = "0.12"
# brrrr
rayon = "1.5"
# HTTP requests
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }
# Checksum verification (already pulled in via rustls)
ring = "0.17"
# Oh gee what could it be
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# License expression parsing and evaluation
spdx = { version = "0.10", features = ["text"] }
# Log timestamps
time = "0.3"
# Configuration parsing
toml = "0.8"
# Manipulation of cargo manifests for diagnostic purposes
toml_edit = "0.22"
# Hashing
twox-hash = "1.6"
# Url parsing
url = "2.2"

[dev-dependencies]
# Filesystems - Filesystem fixtures and assertions for testing
assert_fs = "1.0.7"
# Easy command initialization and assertions
assert_cmd = "2.0"
# Composable first-order predicate functions
predicates = "3.0"
