[package]
name = "cargo-about"
version = "0.8.4"
description = "Cargo plugin for generating a listing of all of the crates and the the terms under which they are licensed"
authors = [
  "Embark <opensource@embark-studios.com>",
  "Jake Shadle <jake.shadle@embark-studios.com>",
]
edition = "2024"
rust-version = "1.85.0"
repository = "https://github.com/EmbarkStudios/cargo-about"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/cargo-about"
homepage = "https://github.com/EmbarkStudios/cargo-about"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo", "license", "spdx"]
exclude = ["media/"]

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "cargo-about"
path = "src/cargo-about/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:nu-ansi-term", "dep:handlebars", "dep:mimalloc", "dep:jiff", "dep:fern", "dep:clap"]

[profile.release]
strip = "debuginfo"
lto = true

[dependencies]
# Error facilities
anyhow = "1.0"
# Diagnostic reporting
codespan = "0.13"
codespan-reporting = "0.13"
# Directory walking
ignore = "0.4"
# Dependency graphing
krates = { version = "0.21", features = ["serialize"] }
# Parent process retrieval
libc = "0.2"
# Logging macros
log = "0.4"
# Better locking primitives
parking_lot = "0.12"
memchr = "2.8"
# brrrr
rayon = "1.5"
# HTTP requests
ureq = { version = "3.3", default-features = false, features = ["platform-verifier", "rustls-no-provider"] }
# Checksum verification (already pulled in via rustls)
ring = "0.17"
# TLS
rustls = { version = "0.23", default-features = false, features = ["ring"] }
# Oh gee what could it be
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Used for checking version requirements
semver = { version = "1.0", features = ["serde"] }
# License expression parsing and evaluation
spdx = { version = "0.13", features = ["detection-parallel", "detection-inline-cache", "text"] }
toml-span = "0.7"
# Hashing
twox-hash = "2.0"
# Url parsing
url = "2.5"

# CLI only deps
# Argument parsing
clap = { version = "4.5", optional = true, features = ["derive"] }
# Logging helpers
fern = { version = "0.7", optional = true }
jiff = { version = "0.2", optional = true }
# Template engine for output
handlebars = { version = "6.0", optional = true, features = ["dir_source"] }
# Better heap allocator over system one (usually)
mimalloc = { version = "0.1", optional = true }
# Colorization
nu-ansi-term = { version = "0.50", optional = true }

[dev-dependencies]
# Filesystems - Filesystem fixtures and assertions for testing
assert_fs = "1.0.7"
# Easy command initialization and assertions
assert_cmd = "2.2"
# Composable first-order predicate functions
predicates = "3.0"
